<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shoham.calculatetip.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ctr_waiter1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2">

        <TextView
            android:id="@+id/lbl_waiter1"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/waiter1"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_end_waiter1"
            android:layout_width="104dp"
            android:focusable="false"
            android:onClick="selectTime"
            android:layout_height="42dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/seven_oclock"
            android:textAlignment="center"
            app:layout_constraintLeft_toRightOf="@+id/lbl_waiter1"
            tools:layout_editor_absoluteY="-10dp" />

        <EditText
            android:id="@+id/txt_start_waiter1"
            android:layout_width="104dp"
            android:focusable="false"
            android:onClick="selectTime"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/one_pm"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_end_waiter1"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintLeft_toRightOf="@+id/txt_end_waiter1"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ctr_waiter2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ctr_waiter1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/lbl_waiter2"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/waiter2"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_end_waiter2"
            android:layout_width="104dp"
            android:focusable="false"
            android:onClick="selectTime"
            android:layout_height="42dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/one_pm"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_waiter2"
            app:layout_constraintLeft_toRightOf="@+id/lbl_waiter2" />

        <EditText
            android:id="@+id/txt_start_waiter2"
            android:layout_width="104dp"
            android:focusable="false"
            android:onClick="selectTime"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/four_oclock"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_end_waiter2"
            app:layout_constraintLeft_toRightOf="@+id/txt_end_waiter2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/ctr_barman1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ctr_waiter2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/lbl_barman1"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/barman1"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_end_barman1"
            android:layout_width="104dp"
            android:focusable="false"
            android:onClick="selectTime"
            android:layout_height="42dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/seven_oclock"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_barman1"
            app:layout_constraintLeft_toRightOf="@+id/lbl_barman1" />

        <EditText
            android:id="@+id/txt_start_barman1"
            android:layout_width="104dp"
            android:focusable="false"
            android:onClick="selectTime"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/one_pm"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_end_barman1"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintLeft_toRightOf="@+id/txt_end_barman1"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ctr_barman2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ctr_barman1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/lbl_barman2"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/barman2"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_end_barman2"
            android:layout_width="104dp"
            android:focusable="false"
            android:onClick="selectTime"
            android:layout_height="42dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/one_pm"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_barman2"
            app:layout_constraintLeft_toRightOf="@+id/lbl_barman2" />

        <EditText
            android:id="@+id/txt_start_barman2"
            android:layout_width="104dp"
            android:focusable="false"
            android:onClick="selectTime"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="time"
            android:text="@string/four_oclock"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_end_barman2"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintLeft_toRightOf="@+id/txt_end_barman2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/tableLayout2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/lbl_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cash_money" />

            <TextView
                android:id="@+id/lbl_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/credit_money" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txt_cash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/zero"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/txt_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/zero"
                android:inputType="numberDecimal" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/ctr_barman2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/waiter1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/waiter2"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/barman1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/barman2"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>


</android.support.constraint.ConstraintLayout>
